flux/apps/ext/stub-website/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stub-website-svc
  namespace: stub-website
spec:
  ports:
    - name: dashboard
      port: 8080
      targetPort: 8080
