flux/apps/ext/stub-website/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stub-website-httproute
  namespace: stub-website
spec:
  parentRefs:
    - name: web
  rules:
    - matches:
        - headers:
            - name: Host
              value: fingol.pro
      backendRefs:
        - name: stub-website-svc
          port: 80
