flux/apps/ext/stub-website/manifest.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: stub-website
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stub-website
  namespace: stub-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stub-website
  template:
    metadata:
      labels:
        app: stub-website
    spec:
      containers:
        - name: nginx
          image: nginx:stable-alpine3.23
          ports:
            - containerPort: 80
          volumeMounts:
            - name: stub-website-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: stub-website-volume
          persistentVolumeClaim:
            claimName: stub-website-pvc
        - name: git-sync-volume
          emptyDir: {} # temporary workspace for git-sync
---
apiVersion: v1
kind: Service
metadata:
  name: stub-website
  namespace: stub-website
spec:
  selector:
    app: stub-website
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: middleware-chain
  namespace: stub-website
spec:
  chain:
    middlewares:
      - name: bouncer
        namespace: traefik-ext
      - name: authelia-auth
        namespace: traefik-ext
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stub-website-route
  namespace: stub-website
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik-ext
  hostnames:
    - "fingol.pro"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: middleware-chain
      backendRefs:
        - name: stub-website
          port: 80
